# PyDict2Class

./: Pipfile  README.md  dict2class.kdev4  example.py  pyproject.toml
dict2class/: __init__.py  lib.py
pydict2class/: __init__.py  lib.py
tests/: test_modul.py
