[project]
name = "dbpiening.Dict2Class"
version = "0.0.1"
authors = [
  { name="Author", email="dierk-bent.piening@mailbox.org" },
]
description = "Dynamically generate classes from JSON or Dicts"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dierk-bentpiening/Dict2Class/"
"Bug Tracker" = "https://github.com/dierk-bentpiening/Dict2Class/issues"