[project]
name = "pydict2class"
version = "0.0.1"
authors = [
  { name="Dierk-Bent Piening", email="dierk-bent.piening@mailbox.org" },
]
description = "Dynamically generate classes from JSON or Dicts"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
"Homepage" = "https://github.com/dierk-bentpiening/Dict2Class/"
"Bug Tracker" = "https://github.com/dierk-bentpiening/Dict2Class/issues"